# pepper_ros_diagnostics

./: .gitignore  CMakeLists.txt  package.xml
head_pitch_updater/: CMakeLists.txt  package.xml
head_yaw_updater/: CMakeLists.txt  package.xml
hip_pitch_updater/: CMakeLists.txt  package.xml
hip_roll_updater/: CMakeLists.txt  package.xml
knee_pitch_updater /: CMakeLists.txt  package.xml
lElbowRoll_updater/: CMakeLists.txt  package.xml
lElbowYaw_updater/: CMakeLists.txt  package.xml
lShoulderPitch_updater/: CMakeLists.txt  package.xml
lShoulderRoll_updater/: CMakeLists.txt  package.xml
lWristYaw_updater/: CMakeLists.txt  package.xml
launch/: pepper_ros_diagnostics.launch
left_elbowroll_updater/: CMakeLists.txt  package.xml
left_elbowyaw_updater/: CMakeLists.txt  package.xml
left_shoulderpitch_updater/: CMakeLists.txt  package.xml
left_shoulderroll_updater/: CMakeLists.txt  package.xml
left_wristyaw_updater/: CMakeLists.txt  package.xml
pepper_aggregator/: CMakeLists.txt  package.xml
pepper_diagnostics/: CMakeLists.txt  package.xml
right_elbowroll_updater/: CMakeLists.txt  package.xml
right_elbowyaw_updater/: CMakeLists.txt  package.xml
right_shoulderpitch_updater/: CMakeLists.txt  package.xml
right_shoulderpitch_updater/config/: right_shoulderpitch_config.yaml
right_shoulderpitch_updater/launch/: right_shoulderpitch_updater.launch
right_shoulderpitch_updater/src/: updaterRShoulderPitch.c++
right_shoulderroll_updater/: CMakeLists.txt  package.xml
right_wristyaw_updater/: CMakeLists.txt  package.xml
(+53 files in other folders)
